--- a/C#/shanuMVCUserRoles/Views/Shared/_CategoriesPartial.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Shared/_CategoriesPartial.cshtml
@@ -4,6 +4,6 @@
 @foreach (var item in Model)
 {
     <li>
-        <a href="Shop">@Html.ActionLink(@item.Name, "Index", "Shop", routeValues: null, htmlAttributes: new { id = @item.Id })</a>
+        @Html.ActionLink(@item.Name, "Categories", "Shop", routeValues: new { id = @item.Id }, htmlAttributes: new { })
     </li>
 }
