--- a/C#/shanuMVCUserRoles/Areas/Admin/Views/PageManagement/AddPage.cshtml
+++ b/C#/shanuMVCUserRoles/Areas/Admin/Views/PageManagement/AddPage.cshtml
@@ -19,6 +19,11 @@
         @using (Html.BeginForm())
         {
             <div class="form-group">
+                @Html.LabelFor(model => model.TopicId)
+                @Html.DropDownListFor(model => model.TopicId, Model.topics, "Chọn danh mục bài viết", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
                 @Html.LabelFor(model => model.Title)
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
