--- a/C#/shanuMVCUserRoles/Views/Shared/_Layout.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Shared/_Layout.cshtml
@@ -172,7 +172,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </ul>
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("BLOG", "About", "Home", null, new { @class = "nav-link" })
+                            @Html.ActionLink("BLOG", "Index", "Page", null, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
                             @Html.ActionLink("LIÊN HỆ", "Contact", "Home", null, new { @class = "nav-link" })
