--- a/C#/shanuMVCUserRoles/Views/Home/Index.cshtml
+++ b/C#/shanuMVCUserRoles/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                         UY TÍN - CHẤT LƯỢNG
                         <span>Bạn có muốn những tinh dầu chất lượng nhất?</span>
                     </h3>
-                    @Html.ActionLink("Mua Ngay", "Index", "Shop",null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
+                    @Html.ActionLink("Mua Ngay", "Index", "Shop", null, new { @class = "btn btn-sm animated-button gibson-three mt-4" })
                 </div>
             </div>
             <div class="carousel-item item2">
@@ -61,83 +61,88 @@
 <!--//banner -->
 <!--//banner-sec-->
 <section class="banner-bottom-wthreelayouts py-lg-5 py-3">
-    <div class="container-fluid">
+    <div class="testimonials-inner py-lg-4 py-3">
         <div class="inner-sec-shop px-lg-4 px-3">
-            <h3 class="tittle-w3layouts my-lg-4 my-4">Sản Phẩm Đề Cử Cho Bạn </h3>
-            <div class="row">
-                <!-- new product -->
-                @foreach (var item in Model)
-                {
-                    <div class="col-md-3 product-men women_two">
-                        <div class="product-googles-info googles">
-                            <div class="men-pro-item">
-                                <div class="men-thumb-item">
-                                    <img src="~/Images/Products/@item.Id/Thumbs/@item.Image" class="img-fluid" alt="">
-                                    <div class="men-cart-pro">
-                                        <div class="inner-men-cart-pro">
-                                            @Html.ActionLink("Xem chi tiết", "ProductDetails", "Shop", new { id = @item.Id }, new { @class = "link-product-add-cart" })
-                                        </div>
-                                    </div>
-                                    <span class="product-new-top">Mới</span>
-                                </div>
-                                <div class="item-info-product">
-                                    <div class="info-product-price">
-                                        <div class="grid_meta">
-                                            <div class="product_price">
-                                                <h4>
-                                                    @Html.ActionLink(@item.Name, "ProductDetails", "Shop", new { id = @item.Id }, new { })
-                                                </h4>
-                                                <div class="grid-price mt-2">
-                                                    <span class="money ">@item.Price VND</span>
+            <h3 class="tittle-w3layouts my-lg-4 my-4" style="text-align:center">Sản Phẩm Đề Cử Cho Bạn </h3>
+            
+                <div class="container-fluid">
+                    <div class="testimonials py-lg-4 py-3 mt-4">
+                        <div class="row">   
+                            <!-- new product -->
+                            @foreach (var item in Model)
+                            {
+                                <div class="col-md-3 product-men women_two">
+                                    <div class="product-googles-info googles">
+                                        <div class="men-pro-item">
+                                            <div class="men-thumb-item">
+                                                <img src="~/Images/Products/@item.Id/@item.Image" class="img-fluid" alt="">
+                                                <div class="men-cart-pro">
+                                                    <div class="inner-men-cart-pro">
+                                                        @Html.ActionLink("Xem chi tiết", "ProductDetails", "Shop", new { id = @item.Id }, new { @class = "link-product-add-cart" })
+                                                    </div>
                                                 </div>
+                                                <span class="product-new-top">Mới</span>
                                             </div>
-                                            <ul class="stars">
-                                                <li>
-                                                    <a href="#">
-                                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">
-                                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">
-                                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">
-                                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">
-                                                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div class="googles single-item hvr-outline-out">
-                                            <form action="#" method="post">
-                                                <input type="hidden" name="cmd" value="_cart">
-                                                <input type="hidden" name="add" value="1">
-                                                <input type="hidden" name="googles_item" value="Farenheit">
-                                                <input type="hidden" name="amount" value="575.00">
-                                                <button type="submit" class="googles-cart pgoogles-cart">
-                                                    <i class="fas fa-cart-plus"></i>
-                                                </button>
-                                            </form>
+                                            <div class="item-info-product">
+                                                <div class="info-product-price">
+                                                    <div class="grid_meta">
+                                                        <div class="product_price">
+                                                            <h4>
+                                                                @Html.ActionLink(@item.Name, "ProductDetails", "Shop", new { id = @item.Id }, new { })
+                                                            </h4>
+                                                            <div class="grid-price mt-2">
+                                                                <span class="money ">@item.Price VND</span>
+                                                            </div>
+                                                        </div>
+                                                        <ul class="stars">
+                                                            <li>
+                                                                <a href="#">
+                                                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                                                </a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#">
+                                                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                                                </a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#">
+                                                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                                                </a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#">
+                                                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                                                </a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="#">
+                                                                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                                                                </a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="googles single-item hvr-outline-out">
+                                                        <form action="#" method="post">
+                                                            <input type="hidden" name="cmd" value="_cart">
+                                                            <input type="hidden" name="add" value="1">
+                                                            <input type="hidden" name="googles_item" value="@item.Name">
+                                                            <input type="hidden" name="amount" value="@item.Price">
+                                                            <button type="submit" class="googles-cart pgoogles-cart">
+                                                                <i class="fas fa-cart-plus"></i>
+                                                            </button>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                                <div class="clearfix"></div>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="clearfix"></div>
                                 </div>
-                            </div>
+                            }
+                            <!-- new product/ -->
                         </div>
                     </div>
-                }
-                <!-- new product/ -->
             </div>
             <!--//row-->
             <!--/meddle-->
@@ -352,19 +357,19 @@
     </div>
 </div>
 <script>
-		$(document).ready(function () {
-			$("#myModal").modal();
-		});
+    $(document).ready(function () {
+        $("#myModal").modal();
+    });
 </script>
 <!-- // modal -->
 <script src="~/Content/js/simplyCountdown.js"></script>
 <link href="~/Content/css/simplyCountdown.css" rel='stylesheet' type='text/css' />
 <script>
-		var d = new Date();
-		simplyCountdown('simply-countdown-custom', {
-			year: d.getFullYear(),
-			month: d.getMonth() + 2,
-			day: 25
-		});
+    var d = new Date();
+    simplyCountdown('simply-countdown-custom', {
+        year: d.getFullYear(),
+        month: d.getMonth() + 2,
+        day: 25
+    });
 </script>
 <!--// Count-down -->
