Thay đổi description product thành kiểu HTML

--- a/C#/shanuMVCUserRoles/Areas/Admin/Views/ShopManagement/AddProduct.cshtml
+++ b/C#/shanuMVCUserRoles/Areas/Admin/Views/ShopManagement/AddProduct.cshtml
@@ -11,56 +11,54 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Decription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Decription, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Decription, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2" for="HasSidebar">Category</label>
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.CategoryId, Model.Categories, "Chọn danh mục sản phẩm", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-md-2" for="HasSidebar">Thêm hình ảnh</label>
-            <div class="col-md-10">
-                <input type="file" name="file" id="ImageUpload" />
-                <img id="imgpreview" src="#" />
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Add Product" class="btn btn-default" />
-            </div>
-        </div>
-
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2" for="HasSidebar">Category</label>
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.CategoryId, Model.Categories, "Chọn danh mục sản phẩm", new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2" for="HasSidebar">Thêm hình ảnh</label>
+        <div class="col-md-10">
+            <input type="file" name="file" id="ImageUpload" />
+            <img id="imgpreview" src="#" />
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Decription, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(model => model.Decription, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Decription, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Add Product" class="btn btn-default" />
+        </div>
+    </div>
+
+</div>
 }
 
 <div>
@@ -68,36 +66,41 @@
 </div>
 
 @section Scripts {
+    <script src="~/Content/ckeditor/ckeditor.js"></script>
+
+    <script>
+        CKEDITOR.replace("Decription");
+    </script>
     <script>
 
-$(function () {
+        $(function () {
 
-    /*
-    * Preview selected image
-    */
+            /*
+            * Preview selected image
+            */
 
-    function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
+            function readURL(input) {
+                if (input.files && input.files[0]) {
+                    var reader = new FileReader();
 
-            reader.onload = function (e) {
-                $("img#imgpreview")
-                    .attr("src", e.target.result)
-                    .width(200)
-                    .height(200);
+                    reader.onload = function (e) {
+                        $("img#imgpreview")
+                            .attr("src", e.target.result)
+                            .width(200)
+                            .height(200);
+                    }
+
+                    reader.readAsDataURL(input.files[0]);
+                }
             }
 
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
+            $("#ImageUpload").change(function () {
+                readURL(this);
+            });
 
-    $("#ImageUpload").change(function () {
-        readURL(this);
-    });
+            //////////////////////////////////////////////////////////////
 
-    //////////////////////////////////////////////////////////////
-
-});
+        });
 
     </script>
 
